--- a/ch01/1.1.html
+++ b/ch01/1.1.html
@@ -25,3 +25,7 @@
     </p>
 </main>
 </body>
+<footer class="footer">
+    &copy; wombat coffee roasters &mdash;
+    <a href="/terms-of-use">Terms of use</a>
+</footer>
