--- a/ch05/5-1.html
+++ b/ch05/5-1.html
@@ -54,6 +54,8 @@
             text-decoration: none;
         }
 
+        /* .site-nav的直接子元素的第一个兄弟元素 */
+        /* 也就是除了第一个li元素之外的其他li元素 */
         .site-nav > li + li {
             margin-left: 1.5em;
         }
@@ -78,11 +80,86 @@
 
         .column-main {
             flex: 2;
+            /* flex: 66.67%; */
         }
 
         .column-sidebar {
+            flex-direction: column;
+            flex: 1;
+            display: flex;
+            /* flex: 33.33%; */
+        }
+
+        .column-sidebar > .tile {
             flex: 1;
         }
+
+        .login-form h3 {
+            margin: 0;
+            font-size: .9em;
+            font-weight: bold;
+            text-align: right;
+            /* 将文本转换为大写 */
+            text-transform: uppercase;
+        }
+
+        /* 给文本类型的输入框添加样式 */
+        /* 不包含复选框和单选框 */
+        .login-form input:not([type=checkbox]):not([type=radio]) {
+            display: block;
+            width: 100%;
+            margin-top: 0;
+        }
+
+        .login-form button {
+            margin-top: 1em;
+            border: 1px solid #cc6b5a;
+            background-color: white;
+            padding: .5em 1em;
+            cursor: pointer;
+        }
+
+        .centered {
+            text-align: center;
+        }
+
+        .cost {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            line-height: .7;
+        }
+
+        .cost > span {
+            margin-top: 0;
+        }
+
+        .cost-currency {
+            font-size: 2rem;
+            /* 以下两个属性开启一个都会让justify-content属性失效 */
+            /* margin: auto; */
+            /* flex-grow: 1; */
+        }
+
+        .cost-dollars {
+            font-size: 4rem;
+            /* flex-grow: 1; */
+        }
+
+        .cost-cents {
+            font-size: 1.5rem;
+            align-self: flex-start;
+        }
+
+        .cta-button {
+            display: block;
+            background-color: #cc6b5a;
+            color: white;
+            padding: .5em 1em;
+            text-decoration: none;
+        }
+
+
     </style>
 </head>
 <body>
@@ -105,11 +182,18 @@
 
         <main class="flex">
             <!-- 主体板块 -->
-            <div class="column-main tile">
+            <div class="tile column-main">
                 <h1>Team collaboration done right</h1>
                 <p>Thousands of teams from all over the
                     world turn to <b>Ink</b> to communicate
                     and get things done.</p>
+                <h1>Communication around the globe</h1>
+                <p>Thousands of teams from all over the worid tur!communicate and get things done.</p>
+                <h1>Instant access to your team's documents</h1>
+                <p>Thousands of leams from all over the worild turn to ink to communicate and get things done.</p>
+                <h1>Intuitive interface</h1>
+                <p>Thousands of teams from all over the worid turn to lnk tocommunicate and get things done.</p>
+
             </div>
 
             <div class="column-sidebar">
